--- a/templates/embed-api/third-party-visualizations.html
+++ b/templates/embed-api/third-party-visualizations.html
@@ -3,11 +3,7 @@
 {% block content %}
 
 <section>
-  <h2>Demo Overview</h2>
-  <p>{{ page.excerpt | safe }}</p>
-  <p>The Embed API is built on top of the <a href="https://developers.google.com/api-client-library/javascript/">Google APIs client library</a>, which means you don't just get access to the reporting API, you get access to everything.
-
-  <p>In addition to showing Chart.js visualizations, this example uses the underlying client library to query data from the <a href="https://developers.google.com/analytics/devguides/reporting/realtime/">Real Time Reporting API</a>.
+  <h2>Overview</h2>
 </section>
 
 <div class="Dashboard Dashboard--full">
@@ -71,73 +67,6 @@
 </div>
 
 <section>
-<h2>How it works</h2>
-
-<p>You can recreate the demo above by copy and pasting the following code into an HTML file running on a web server. Feel free to add additional CSS to spice it up a bit!</p>
-
-<p>If you want to know more, check out the <a href="https://developers.google.com/analytics/devguides/reporting/embed/">Embed API documentation</a> on our developers site.</p>
-
-<h3>Step 1: Load the Embed API library.</h3>
-
-<pre>
-{%- filter forceescape -%}
-<script>
-{% include 'embed-api/code/_snippet.js' %}
-</script>
-{%- endfilter -%}
-</pre>
-
-<h3>Step 2: Add HTML containers to host the dashboard components.</h3>
-
-<pre>
-{%- filter forceescape -%}
-<header>
-  <div id="embed-api-auth-container"></div>
-  <div id="view-selector-container"></div>
-  <div id="view-name"></div>
-  <div id="active-users-container"></div>
-</header>
-<div class="Chartjs">
-  <h3>This Week vs Last Week (by sessions)</h3>
-  <figure class="Chartjs-figure" id="chart-1-container"></figure>
-  <ol class="Chartjs-legend" id="legend-1-container"></ol>
-</div>
-<div class="Chartjs">
-  <h3>This Year vs Last Year (by users)</h3>
-  <figure class="Chartjs-figure" id="chart-2-container"></figure>
-  <ol class="Chartjs-legend" id="legend-2-container"></ol>
-</div>
-<div class="Chartjs">
-  <h3>Top Browsers (by pageview)</h3>
-  <figure class="Chartjs-figure" id="chart-3-container"></figure>
-  <ol class="Chartjs-legend" id="legend-3-container"></ol>
-</div>
-<div class="Chartjs">
-  <h3>Top Countries (by sessions)</h3>
-  <figure class="Chartjs-figure" id="chart-4-container"></figure>
-  <ol class="Chartjs-legend" id="legend-4-container"></ol>
-</div>
-{%- endfilter -%}
-</pre>
-
-<h3>Step 3: Load the components and their dependencies.</h3>
-
-<pre>
-{%- filter forceescape -%}
-{% include 'embed-api/dependencies/_third-party-visualizations.html' %}
-{%- endfilter -%}
-</pre>
-
-<h3>Step 4: Write the dashboard code.</h3>
-
-<pre>
-{%- filter forceescape -%}
-<script>
-
-{% include 'embed-api/code/_third-party-visualizations.js' %}
-</script>
-{%- endfilter -%}
-</pre>
 
 </section>
 {% endblock %}
