--- a/templates/embed-api/basic-dashboard.html
+++ b/templates/embed-api/basic-dashboard.html
@@ -2,8 +2,7 @@
 
 {% block content %}
 <section>
-  <h2>Demo Overview</h2>
-  <p>{{ page.excerpt }}</p>
+  <h2>Overview</h2>
 </section>
 
 <div class="Dashboard">
@@ -18,42 +17,6 @@
 </div>
 
 <section>
-<h2>How it works</h2>
-
-<p>You can recreate the demo above by copy and pasting the following code into an HTML file running on a web server. Feel free to add some CSS to spice it up a bit!</p>
-
-<p>If you want to know more, check out the <a href="https://developers.google.com/analytics/devguides/reporting/embed/">Embed API documentation</a> on our developers site.</p>
-
-<h3>Step 1: Load the Embed API library.</h3>
-
-<pre>
-{%- filter forceescape -%}
-<script>
-{% include 'embed-api/code/_snippet.js' %}
-</script>
-{%- endfilter -%}
-</pre>
-
-<h3>Step 2: Add HTML containers to host the dashboard components.</h3>
-
-<pre>
-{%- filter forceescape -%}
-<div id="embed-api-auth-container"></div>
-<div id="chart-container"></div>
-<div id="view-selector-container"></div>
-{%- endfilter -%}
-</pre>
-
-<h3>Step 3: Write the dashboard code.</h3>
-
-<pre>
-{%- filter forceescape -%}
-<script>
-
-{% include 'embed-api/code/_basic-dashboard.js' %}
-</script>
-{%- endfilter -%}
-</pre>
 
 </section>
 {% endblock %}
