--- a/templates/embed-api/multiple-views.html
+++ b/templates/embed-api/multiple-views.html
@@ -3,9 +3,7 @@
 {% block content %}
 
 <section>
-  <h2>Demo Overview</h2>
-  <p>{{ page.excerpt }}</p>
-  <p>Use the view selector below to see this comparison for any of your Google Analytics views.</p>
+  <h2>Overview</h2>
 </section>
 
 <ul class="FlexGrid">
@@ -32,44 +30,6 @@
 </ul>
 
 <section>
-<h2>How it works</h2>
-
-<p>You can recreate the demo above by copy and pasting the following code into an HTML file running on a web server. Feel free to add some CSS to spice it up a bit!</p>
-
-<p>If you want to know more, check out the <a href="https://developers.google.com/analytics/devguides/reporting/embed/">Embed API documentation</a> on our developers site.</p>
-
-<h3>Step 1: Load the Embed API library.</h3>
-
-<pre>
-{%- filter forceescape -%}
-<script>
-{% include 'embed-api/code/_snippet.js' %}
-</script>
-{%- endfilter -%}
-</pre>
-
-<h3>Step 2: Add HTML containers to host the dashboard components.</h3>
-
-<pre>
-{%- filter forceescape -%}
-<div id="embed-api-auth-container"></div>
-<div id="chart-1-container"></div>
-<div id="chart-2-container"></div>
-<div id="view-selector-1-container"></div>
-<div id="view-selector-2-container"></div>
-{%- endfilter -%}
-</pre>
-
-<h3>Step 3: Write the dashboard code.</h3>
-
-<pre>
-{%- filter forceescape -%}
-<script>
-
-{% include 'embed-api/code/_multiple-views.js' %}
-</script>
-{%- endfilter -%}
-</pre>
 </section>
 
 {% endblock %}
