--- a/templates/embed-api/custom-components.html
+++ b/templates/embed-api/custom-components.html
@@ -2,21 +2,7 @@
 
 {% block content %}
 <section>
-  <h2>Demo Overview</h2>
-
-  <p>{{ page.excerpt }}</p>
-
-  <p>The two components used in this dashboard are <code>DateRangeSelector</code> and <code>ViewSelector2</code>.
-
-  <h3>Date range selector component</h3>
-
-  <p>The date range selector component allows you to pick various start and end dates. Whenever a new date is chosen, a "change" event is emitted and the date values can be passed to a query component (e.g. <code>DateChart</code>).</p>
-
-  <h3>Enhanced view selector component</h3>
-
-  <p>The built in view selector is pretty nice, but it only gives you the <code>ids</code> property when you change views. If you want to get any additional information (like the name of the view or the account it belongs to) you're out of luck. The <code>ViewSelector2</code> component extends the functionality of the native <code>ViewSelector</code> to offer these additional features.</p>
-
-  <p>In the demo below, when you change views, the dashboard title is updated with the new view and property name.</p>
+  <h2>Overview</h2>
 </section>
 
 <div class="Dashboard Dashboard--full">
@@ -45,56 +31,6 @@
 </div>
 
 <section>
-<h2>How it works</h2>
-
-<p>You can recreate the demo above by copy and pasting the following code into an HTML file running on a web server. Feel free to add some CSS to spice it up a bit!</p>
-
-<p>To learn how to build your own component, check out the <a href="https://developers.google.com/analytics/devguides/reporting/embed/v1/custom-components">creating custom components</a> developer guide. For general information about the Embed API, check out the <a href="https://developers.google.com/analytics/devguides/reporting/embed/">documentation</a> on our developers site.</p>
-
-
-<h3>Step 1: Load the Embed API library.</h3>
-
-<pre>
-{%- filter forceescape -%}
-<script>
-{% include 'embed-api/code/_snippet.js' %}
-</script>
-{%- endfilter -%}
-</pre>
-
-<h3>Step 2: Add HTML containers to host the dashboard components.</h3>
-
-<pre>
-{%- filter forceescape -%}
-<div id="embed-api-auth-container"></div>
-<div id="view-selector-container"></div>
-<div id="data-chart-1-container"></div>
-<div id="date-range-selector-1-container"></div>
-<div id="data-chart-2-container"></div>
-<div id="date-range-selector-2-container"></div>
-{%- endfilter -%}
-</pre>
-
-<h3>Step 3: Load the components and their dependencies.</h3>
-
-<pre>
-{%- filter forceescape -%}
-{% include'embed-api/dependencies/_custom-components.html' %}
-{%- endfilter -%}
-</pre>
-
-<p><strong>Note:</strong> custom component files create new constructor functions on the <code>gapi.analytics.ext</code> object, so in this case once these scripts are loaded the components can be found at <code>gapi.analytics.ext.ViewSelector2</code> and <code>gapi.analytics.ext.DateRangeSelector</code>.</p>
-
-<h3>Step 4: Write the dashboard code.</h3>
-
-<pre>
-{%- filter forceescape -%}
-<script>
-
-{% include 'embed-api/code/_custom-components.js' %}
-</script>
-{%- endfilter -%}
-</pre>
 </section>
 {% endblock %}
 
