--- a/templates/_nav.html
+++ b/templates/_nav.html
@@ -1,19 +1,11 @@
 <nav class="Nav">
 
   <section class="Nav-section">
-    <h1 class="Nav-category">Demos &amp; Tools</h1>
+    <h1 class="Nav-category">Menu</h1>
     <ol>
       {% for pr in site.projects %}
         {% include '_nav-project.html' %}
       {% endfor %}
-    </ol>
-  </section>
-
-  <section class="Nav-section">
-    <h1 class="Nav-category">Resources</h1>
-    <ol>
-      <li><a class="Nav-link" href="/#about">About this Site</a></li>
-      <li><a class="Nav-link" href="/#help">Help & Feedback</a></li>
     </ol>
   </section>
 
