--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% set title = 'PeruHop Analytics Dashboard' %}
+{% set title = 'Analytics Dashboard' %}
 
 {% block content %}
 <section>
@@ -10,11 +10,6 @@
       srcset="/public/images/google-analytics-partners-2x.png 2x"
       src="/public/images/google-analytics-partners.png">
   </p>
-
-  <h2 id="about">About this Site</h2>
-
-  <p><b>{{ site.title }}</b></p>
-
 
 </section>
 
