Creado nuevo Chart renderWeekOverWeekOverWeekChart para comparar 3 semanas consecutivas.

--- a/templates/embed-api/third-party-visualizations.html
+++ b/templates/embed-api/third-party-visualizations.html
@@ -43,6 +43,30 @@
         <ol class="Chartjs-legend" id="legend-2-container"></ol>
       </div>
     </li>
+
+
+    <li class="FlexGrid-item">
+      <div class="Chartjs">
+        <header class="Titles">
+          <h1 class="Titles-main">This Week vs Last Week vs Before Last Week</h1>
+          <div class="Titles-sub">By sessions</div>
+        </header>
+        <figure class="Chartjs-figure" id="chart-5-container"></figure>
+        <ol class="Chartjs-legend" id="legend-5-container"></ol>
+      </div>
+    </li>
+    <li class="FlexGrid-item">
+      <div class="Chartjs">
+        <header class="Titles">
+          <h1 class="Titles-main">This Year vs Last Year vs Before Last Year</h1>
+          <div class="Titles-sub">By users</div>
+        </header>
+        <figure class="Chartjs-figure" id="chart-6-container"></figure>
+        <ol class="Chartjs-legend" id="legend-6-container"></ol>
+      </div>
+    </li>
+
+
     <li class="FlexGrid-item">
       <div class="Chartjs">
         <header class="Titles">
