--- a/templates/embed-api/third-party-visualizations.html
+++ b/templates/embed-api/third-party-visualizations.html
@@ -23,7 +23,7 @@
   </header>
 
   <ul class="FlexGrid FlexGrid--halves">
-    <li class="FlexGrid-item">
+    <!--li class="FlexGrid-item">
       <div class="Chartjs">
         <header class="Titles">
           <h1 class="Titles-main">This Week vs Last Week</h1>
@@ -32,8 +32,8 @@
         <figure class="Chartjs-figure" id="chart-1-container"></figure>
         <ol class="Chartjs-legend" id="legend-1-container"></ol>
       </div>
-    </li>
-    <li class="FlexGrid-item">
+    </li-->
+    <!--li class="FlexGrid-item">
       <div class="Chartjs">
         <header class="Titles">
           <h1 class="Titles-main">This Year vs Last Year</h1>
@@ -42,7 +42,7 @@
         <figure class="Chartjs-figure" id="chart-2-container"></figure>
         <ol class="Chartjs-legend" id="legend-2-container"></ol>
       </div>
-    </li>
+    </li-->
 
 
     <li class="FlexGrid-item">
@@ -93,10 +93,6 @@
 <section>
 
 </section>
-{% endblock %}
-
-{% block tech_content %}
-  The {{ page.title }} demo uses the <code>Data</code> component of the <a href="{{ site.tech.embed_api.url }}">{{ site.tech.embed_api.name }}</a>, which queries the <a href="{{ site.tech.core_reporting_api.url }}">{{ site.tech.core_reporting_api.name }}</a> behind the scenes. It also uses a custom <code>ViewSelector2</code> component, which uses the <a href="{{ site.tech.management_api.url }}">{{ site.tech.management_api.name }}</a> to get a list of accounts the current user can access. Lastly, it uses a custom <code>ActiveUsers</code> component to query the <a href="{{ site.tech.real_time_reporting_api.url }}">{{ site.tech.real_time_reporting_api.name }}</a> and see how many users are on the site now.
 {% endblock %}
 
 {% block foot_scripts %}
