--- a/src/css/components/titles.css
+++ b/src/css/components/titles.css
@@ -31,6 +31,7 @@ limitations under the License.
   color: inherit;
   font: inherit;
   margin: 0;
+  text-align: center;
 }
 .Titles-main {
   font-size: 1.4em;
@@ -77,11 +78,11 @@ limitations under the License.
     margin: 1em 0 var(--gap);
   }
   .Titles--hero .Titles-main {
-    display: inline-block;
+    /*display: inline-block;*/
     margin-right: .25em;
   }
   .Titles--hero .Titles-sub {
-    display: inline-block;
+    /*display: inline-block;*/
   }
 }
 
