Cambiado título principal.

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% set title = 'Analytics Dashboard' %}
+{% set title = 'PeruHop Analytics Dashboard' %}
 
 {% block content %}
 <section>
