--- a/src/css/components/site.css
+++ b/src/css/components/site.css
@@ -25,7 +25,7 @@ limitations under the License.
 }
 
 .Site-sidebar {
-  background: var(--bg-color-dark-faded);
+  background: var(--bg-color-flat-dark-blue);
   bottom: 0;
   box-shadow: 0 0 var(--gap) rgba(0, 0, 0, 0);
   left: -var(--sidebar-width);
@@ -87,7 +87,7 @@ limitations under the License.
   }
 
   .Site-sidebar {
-    background: var(--bg-color-dark-faded);
+    background: var(--bg-color-flat-dark-blue);
     /*border-top: .4em solid #222;*/
     box-shadow: none;
     overflow: visible;
