--- a/src/css/components/titles.css
+++ b/src/css/components/titles.css
@@ -23,7 +23,7 @@ limitations under the License.
   font-weight: 300;
   /letter-spacing: -.03em;
   line-height: 1.2;
-  margin: 0 0 var(--gap);
+  /*margin: 0 0 var(--gap);*/
   /word-spacing: .2em;
 }
 .Titles-main,
@@ -75,7 +75,7 @@ limitations under the License.
 
 @media (--break-md) {
   .Titles--hero {
-    margin: 1em 0 var(--gap);
+    /*margin: 1em 0 var(--gap);*/
   }
   .Titles--hero .Titles-main {
     /*display: inline-block;*/
@@ -88,7 +88,7 @@ limitations under the License.
 
 @media (--break-lg) {
   .Titles--hero {
-    margin: 4em 0 0;
+    /*margin: 4em 0 0;*/
   }
   .Titles--hero .Titles-main {
     font-size: 3em;
