Creado en Sub-meú Basico: Cuadro de sessiones por país en una mapa, cuadro lineal de usuarios y nuevos usuarios, y tabla de sesiones por navegador.

--- a/templates/embed-api/basic-dashboard.html
+++ b/templates/embed-api/basic-dashboard.html
@@ -6,6 +6,7 @@
 </section>
 
 <div class="Dashboard">
+  <div class="ViewSelector" id="view-selector-container"></div>
   <div class="Chart">
     <header class="Titles">
       <h1 class="Titles-main">Sessions</h1>
@@ -13,7 +14,30 @@
     </header>
     <figure id="chart-container"></figure>
   </div>
-  <div class="ViewSelector" id="view-selector-container"></div>
+
+  <div class="Chart">
+    <header class="Titles">
+      <h1 class="Titles-main">Nuevos Usuarios</h1>
+      <p class="Titles-sub">Last 30 days</p>
+    </header>
+    <figure id="new-users-chart-container"></figure>
+  </div>
+
+  <div class="Chart">
+    <header class="Titles">
+      <h1 class="Titles-main">Usuarios</h1>
+      <p class="Titles-sub">Last 30 days</p>
+    </header>
+    <figure id="users-chart-container"></figure>
+  </div>
+  
+  <div class="Chart">
+    <header class="Titles">
+      <h1 class="Titles-main">Sesiones por Navegador</h1>
+      <p class="Titles-sub">Last 30 days</p>
+    </header>
+    <figure id="sessions-browsers-chart-container"></figure>
+  </div>
 </div>
 
 <section>
