--- a/templates/embed-api/interactive-charts.html
+++ b/templates/embed-api/interactive-charts.html
@@ -10,18 +10,32 @@
   <ul class="FlexGrid">
     <li class="FlexGrid-item">
       <header class="Titles">
-        <h1 class="Titles-main">Top Browsers (past 7 days)</h3>
+        <div class="ViewSelector" id="view-selector-container"></div>
+      </header>
+    </li>
+  </ul>
+  <ul class="FlexGrid">
+    <li class="FlexGrid-item">
+      <header class="Titles">
+        <h1 class="Titles-main">Usuarios por País (últimos 7 días)</h3>
       </header>
       <div id="main-chart-container" style="min-height:300px"></div>
     </li>
+  </ul>
+  <ul class="FlexGrid">
     <li class="FlexGrid-item">
       <header class="Titles">
-        <h1 class="Titles-main">Sessions by Browser</h3>
+        <h1 class="Titles-main">Usuarios</h3>
+      </header>
+      <div id="breakdown-chart-container"></div>
+    </li>
+    <li class="FlexGrid-item">
+      <header class="Titles">
+        <h1 class="Titles-main">Sesiones por navegador</h3>
       </header>
       <div id="breakdown-chart-container"></div>
     </li>
   </ul>
-  <div class="ViewSelector" id="view-selector-container"></div>
 </div>
 
 <section>
