Cuadro de selección de vista separado en un header. modificado:    templates/embed-api/interactive-charts.html

--- a/templates/embed-api/interactive-charts.html
+++ b/templates/embed-api/interactive-charts.html
@@ -7,13 +7,17 @@
 </section>
 
 <div class="Dashboard Dashboard--full">
-  <ul class="FlexGrid">
-    <li class="FlexGrid-item">
-      <header class="Titles">
-        <div class="ViewSelector" id="view-selector-container"></div>
-      </header>
-    </li>
-  </ul>
+  <header class="Dashboard-header">
+    <ul class="FlexGrid">
+      <li class="FlexGrid-item">
+        <div class="Titles">
+          <h1 class="Titles-main" id="view-name">Selecciona una Vista</h1>
+        </div>
+      </li>
+    </ul>
+    <div class="ViewSelector" id="view-selector-container"></div>
+  </header>
+
   <ul class="FlexGrid">
     <li class="FlexGrid-item">
       <header class="Titles">
