--- a/templates/embed-api/basic-dashboard.html
+++ b/templates/embed-api/basic-dashboard.html
@@ -6,7 +6,17 @@
 </section>
 
 <div class="Dashboard">
-  <div class="ViewSelector" id="view-selector-container"></div>
+    <header class="Dashboard-header">
+    <ul class="FlexGrid">
+      <li class="FlexGrid-item">
+        <div class="Titles">
+          <h1 class="Titles-main" id="view-name">Selecciona una Vista</h1>
+        </div>
+      </li>
+    </ul>
+    <div class="ViewSelector" id="view-selector-container"></div>
+  </header>
+  
   <div class="Chart">
     <header class="Titles">
       <h1 class="Titles-main">Sessions</h1>
