--- a/templates/embed-api/basic-dashboard.html
+++ b/templates/embed-api/basic-dashboard.html
@@ -6,7 +6,7 @@
 </section>
 
 <div class="Dashboard">
-    <header class="Dashboard-header">
+  <header class="Dashboard-header">
     <ul class="FlexGrid">
       <li class="FlexGrid-item">
         <div class="Titles">
@@ -16,38 +16,49 @@
     </ul>
     <div class="ViewSelector" id="view-selector-container"></div>
   </header>
-  
-  <div class="Chart">
-    <header class="Titles">
-      <h1 class="Titles-main">Sessions</h1>
-      <p class="Titles-sub">Last 30 days</p>
-    </header>
-    <figure id="chart-container"></figure>
-  </div>
 
-  <div class="Chart">
-    <header class="Titles">
-      <h1 class="Titles-main">Nuevos Usuarios</h1>
-      <p class="Titles-sub">Last 30 days</p>
-    </header>
-    <figure id="new-users-chart-container"></figure>
-  </div>
+  <ul class="FlexGrid FlexGrid--halves">
+    <li class="FlexGrid-item">
+      <div class="Chart">
+        <header class="Titles">
+          <h1 class="Titles-main">Sesiones</h1>
+          <p class="Titles-sub">Últimos 30 días</p>
+        </header>
+        <figure id="chart-container"></figure>
+      </div>
+    </li>
+    <li class="FlexGrid-item">
+      <div class="Chart">
+        <header class="Titles">
+          <h1 class="Titles-main">Nuevos Usuarios</h1>
+          <p class="Titles-sub">Last 30 days</p>
+        </header>
+        <figure id="new-users-chart-container"></figure>
+      </div>
+    </li>
+  </ul>
 
-  <div class="Chart">
-    <header class="Titles">
-      <h1 class="Titles-main">Usuarios</h1>
-      <p class="Titles-sub">Last 30 days</p>
-    </header>
-    <figure id="users-chart-container"></figure>
-  </div>
-  
-  <div class="Chart">
-    <header class="Titles">
-      <h1 class="Titles-main">Sesiones por Navegador</h1>
-      <p class="Titles-sub">Last 30 days</p>
-    </header>
-    <figure id="sessions-browsers-chart-container"></figure>
-  </div>
+  <ul class="FlexGrid FlexGrid--halves">
+    <li class="FlexGrid-item">
+      <div class="Chart">
+        <header class="Titles">
+          <h1 class="Titles-main">Usuarios</h1>
+          <p class="Titles-sub">Last 30 days</p>
+        </header>
+        <figure id="users-chart-container"></figure>
+      </div>
+    </li>
+    <li class="FlexGrid-item">
+      <div class="Chart">
+        <header class="Titles">
+          <h1 class="Titles-main">Sesiones por Navegador</h1>
+          <p class="Titles-sub">Last 30 days</p>
+        </header>
+        <figure id="sessions-browsers-chart-container"></figure>
+      </div>
+    </li>
+  </ul>
+
 </div>
 
 <section>
