Reordenamiento de cuadros en vista de comparaciones en le tiempo. modificado:    templates/embed-api/basic-dashboard.html modificado:    templates/embed-api/third-party-visualizations.html

--- a/templates/embed-api/basic-dashboard.html
+++ b/templates/embed-api/basic-dashboard.html
@@ -24,7 +24,7 @@
           <h1 class="Titles-main">Sesiones</h1>
           <p class="Titles-sub">Últimos 30 días</p>
         </header>
-        <figure id="chart-container"></figure>
+        <figure class="Chartjs-figure" id="chart-container"></figure>
       </div>
     </li>
     <li class="FlexGrid-item">
@@ -33,7 +33,7 @@
           <h1 class="Titles-main">Nuevos Usuarios</h1>
           <p class="Titles-sub">Last 30 days</p>
         </header>
-        <figure id="new-users-chart-container"></figure>
+        <figure class="Chartjs-figure" id="new-users-chart-container"></figure>
       </div>
     </li>
   </ul>
@@ -45,7 +45,7 @@
           <h1 class="Titles-main">Usuarios</h1>
           <p class="Titles-sub">Last 30 days</p>
         </header>
-        <figure id="users-chart-container"></figure>
+        <figure class="Chartjs-figure" id="users-chart-container"></figure>
       </div>
     </li>
     <li class="FlexGrid-item">
@@ -54,7 +54,7 @@
           <h1 class="Titles-main">Sesiones por Navegador</h1>
           <p class="Titles-sub">Last 30 days</p>
         </header>
-        <figure id="sessions-browsers-chart-container"></figure>
+        <figure class="Chartjs-figure" id="sessions-browsers-chart-container"></figure>
       </div>
     </li>
   </ul>
