--- a/templates/embed-api/third-party-visualizations.html
+++ b/templates/embed-api/third-party-visualizations.html
@@ -24,7 +24,7 @@
 
   <ul class="FlexGrid FlexGrid--halves">
     <li class="FlexGrid-item">
-      <div class="Chartjs">
+      <div class="Chart">
         <header class="Titles">
           <h1 class="Titles-main">This Week vs Last Week vs Before Last Week</h1>
           <div class="Titles-sub">By sessions</div>
@@ -34,7 +34,7 @@
       </div>
     </li>
     <li class="FlexGrid-item">
-      <div class="Chartjs">
+      <div class="Chart">
         <header class="Titles">
           <h1 class="Titles-main">This Year vs Last Year vs Before Last Year</h1>
           <div class="Titles-sub">By users</div>
@@ -43,9 +43,10 @@
         <ol class="Chartjs-legend" id="legend-6-container"></ol>
       </div>
     </li>
-
+  </ul>
+  <ul class="FlexGrid FlexGrid--halves">
     <li class="FlexGrid-item">
-      <div class="Chartjs">
+      <div class="Chart">
         <header class="Titles">
           <h1 class="Titles-main">Top Browsers</h1>
           <div class="Titles-sub">By pageview</div>
@@ -55,7 +56,7 @@
       </div>
     </li>
     <li class="FlexGrid-item">
-      <div class="Chartjs">
+      <div class="Chart">
         <header class="Titles">
           <h1 class="Titles-main">Top Countries</h1>
           <div class="Titles-sub">By sessions</div>
