--- a/src/css/components/dashboard.css
+++ b/src/css/components/dashboard.css
@@ -25,7 +25,7 @@ limitations under the License.
   background: #fff;
   border: 1px solid var(--border-color);
   border-radius: 4px;
-  max-width: var(--Dashboard-maxWidth);
+  /*max-width: var(--Dashboard-maxWidth);*/
   padding: var(--gap);
 }
 
