Creado vista de datos demográficos.

--- a/templates/embed-api/interactive-charts.html
+++ b/templates/embed-api/interactive-charts.html
@@ -21,7 +21,7 @@
   <ul class="FlexGrid">
     <li class="FlexGrid-item">
       <header class="Titles">
-        <h1 class="Titles-main">Usuarios por País (últimos 7 días)</h3>
+        <h1 class="Titles-main">Usuarios por País (últimos 30 días)</h3>
       </header>
       <div id="main-chart-container" style="min-height:300px"></div>
     </li>
@@ -29,15 +29,9 @@
   <ul class="FlexGrid">
     <li class="FlexGrid-item">
       <header class="Titles">
-        <h1 class="Titles-main">Usuarios</h3>
+        <h1 class="Titles-main">Top Landing Page</h3>
       </header>
-      <div id="breakdown-chart-container"></div>
-    </li>
-    <li class="FlexGrid-item">
-      <header class="Titles">
-        <h1 class="Titles-main">Sesiones por navegador</h3>
-      </header>
-      <div id="breakdown-chart-container"></div>
+      <div id="landing-breakdown-chart-container" style="min-height:300px"></div>
     </li>
   </ul>
 </div>
