Creado cuadro interactivo de doble filtro (País y LandingPathPage) para Ruta de Usuarios. modificado:    templates/embed-api/code/_interactive-charts.js modificado:    templates/embed-api/interactive-charts.html

--- a/templates/embed-api/interactive-charts.html
+++ b/templates/embed-api/interactive-charts.html
@@ -31,7 +31,13 @@
       <header class="Titles">
         <h1 class="Titles-main">Top Landing Page</h3>
       </header>
-      <div id="landing-breakdown-chart-container" style="min-height:300px"></div>
+      <div id="landingpath-chart-container" style="min-height:300px"></div>
+    </li>
+    <li class="FlexGrid-item">
+      <header class="Titles">
+        <h1 class="Titles-main">Últimos 3 meses</h3>
+      </header>
+      <div id="temp-landingpath-chart-container" style="min-height:300px"></div>
     </li>
   </ul>
 </div>
