Creado nuevos cuadros en la vista básica: Top Landing Pages y All Pages.

--- a/templates/embed-api/basic-dashboard.html
+++ b/templates/embed-api/basic-dashboard.html
@@ -59,6 +59,27 @@
     </li>
   </ul>
 
+  <ul class="FlexGrid FlexGrid--halves">
+    <li class="FlexGrid-item">
+      <div class="Chart">
+        <header class="Titles">
+          <h1 class="Titles-main">Top Landing Pages</h1>
+          <p class="Titles-sub">Last 30 days</p>
+        </header>
+        <figure class="Chartjs-figure" id="top-landing-chart-container"></figure>
+      </div>
+    </li>
+    <li class="FlexGrid-item">
+      <div class="Chart">
+        <header class="Titles">
+          <h1 class="Titles-main">All Pages (Top Content)</h1>
+          <p class="Titles-sub">Last 30 days</p>
+        </header>
+        <figure class="Chartjs-figure" id="all-pages-chart-container"></figure>
+      </div>
+    </li>
+  </ul>
+
 </div>
 
 <section>
