Cambiado título de cuadro de comparación en el tiempo.

--- a/templates/embed-api/third-party-visualizations.html
+++ b/templates/embed-api/third-party-visualizations.html
@@ -26,7 +26,7 @@
     <li class="FlexGrid-item">
       <div class="Chart">
         <header class="Titles">
-          <h1 class="Titles-main">This Week vs Last Week vs Before Last Week</h1>
+          <h1 class="Titles-main">Últimas 3 semanas</h1>
           <div class="Titles-sub">By sessions</div>
         </header>
         <figure class="Chartjs-figure" id="chart-5-container"></figure>
@@ -36,7 +36,7 @@
     <li class="FlexGrid-item">
       <div class="Chart">
         <header class="Titles">
-          <h1 class="Titles-main">This Year vs Last Year vs Before Last Year</h1>
+          <h1 class="Titles-main">Últimos 3 años</h1>
           <div class="Titles-sub">By users</div>
         </header>
         <figure class="Chartjs-figure" id="chart-6-container"></figure>
