Cambio de título y sibtítulo en cuadro de comparación en el tiempo.

--- a/templates/embed-api/third-party-visualizations.html
+++ b/templates/embed-api/third-party-visualizations.html
@@ -26,8 +26,8 @@
     <li class="FlexGrid-item">
       <div class="Chart">
         <header class="Titles">
-          <h1 class="Titles-main">Últimas 3 semanas</h1>
-          <div class="Titles-sub">By sessions</div>
+          <h1 class="Titles-main">Sesiones</h1>
+          <div class="Titles-sub">Últimas 3 semanas</div>
         </header>
         <figure class="Chartjs-figure" id="chart-5-container"></figure>
         <ol class="Chartjs-legend" id="legend-5-container"></ol>
@@ -36,8 +36,8 @@
     <li class="FlexGrid-item">
       <div class="Chart">
         <header class="Titles">
-          <h1 class="Titles-main">Últimos 3 años</h1>
-          <div class="Titles-sub">By users</div>
+          <h1 class="Titles-main">Usuarios</h1>
+          <div class="Titles-sub">Últimos 3 años</div>
         </header>
         <figure class="Chartjs-figure" id="chart-6-container"></figure>
         <ol class="Chartjs-legend" id="legend-6-container"></ol>
