Creación de cuadro comparativo de usuarios vs nuevos usuarios de los último 30 días.

--- a/templates/embed-api/basic-dashboard.html
+++ b/templates/embed-api/basic-dashboard.html
@@ -44,8 +44,8 @@
     <li class="FlexGrid-item">
       <div class="Chart">
         <header class="Titles">
-          <h1 class="Titles-main">Nuevos Usuarios</h1>
-          <p class="Titles-sub">Last 30 days</p>
+          <h1 class="Titles-main">Usuarios/Nuevos Usuarios</h1>
+          <p class="Titles-sub">Últimos 30 días</p>
         </header>
         <figure class="Chartjs-figure" id="chart-6-container"></figure>
         <ol class="Chartjs-legend" id="legend-6-container"></ol>
