Corregido Títulos de cuadro de usuarios vs nuevos usuarios. Borrado de cuadro de usuarios y cuadro de nuevos usuarios. Agregado cuadro de sesiones por tipo de dispositivo.

--- a/templates/embed-api/basic-dashboard.html
+++ b/templates/embed-api/basic-dashboard.html
@@ -35,15 +35,6 @@
     <li class="FlexGrid-item">
       <div class="Chart">
         <header class="Titles">
-          <h1 class="Titles-main">Nuevos Usuarios</h1>
-          <p class="Titles-sub">Last 30 days</p>
-        </header>
-        <figure class="Chartjs-figure" id="new-users-chart-container"></figure>
-      </div>
-    </li>
-    <li class="FlexGrid-item">
-      <div class="Chart">
-        <header class="Titles">
           <h1 class="Titles-main">Usuarios/Nuevos Usuarios</h1>
           <p class="Titles-sub">Últimos 30 días</p>
         </header>
@@ -57,20 +48,20 @@
     <li class="FlexGrid-item">
       <div class="Chart">
         <header class="Titles">
-          <h1 class="Titles-main">Usuarios</h1>
+          <h1 class="Titles-main">Sesiones por Navegador</h1>
           <p class="Titles-sub">Last 30 days</p>
         </header>
-        <figure class="Chartjs-figure" id="users-chart-container"></figure>
-        <ol class="Chartjs-legend" id="users-chart-container"></ol>
+        <figure class="Chartjs-figure" id="sessions-browsers-chart-container"></figure>
       </div>
     </li>
     <li class="FlexGrid-item">
       <div class="Chart">
         <header class="Titles">
-          <h1 class="Titles-main">Sesiones por Navegador</h1>
+          <h1 class="Titles-main">Session por móvil</h1>
           <p class="Titles-sub">Last 30 days</p>
         </header>
-        <figure class="Chartjs-figure" id="sessions-browsers-chart-container"></figure>
+        <figure class="Chartjs-figure" id="mobile-chart-container"></figure>
+        <ol class="Chartjs-legend" id="mobile-chart-container"></ol>
       </div>
     </li>
   </ul>
