Cambiado subtitulos de vista Basico.

--- a/templates/embed-api/basic-dashboard.html
+++ b/templates/embed-api/basic-dashboard.html
@@ -49,7 +49,7 @@
       <div class="Chart">
         <header class="Titles">
           <h1 class="Titles-main">Sesiones por Navegador</h1>
-          <p class="Titles-sub">Last 30 days</p>
+          <p class="Titles-sub">Últimos 30 días</p>
         </header>
         <figure class="Chartjs-figure" id="sessions-browsers-chart-container"></figure>
       </div>
@@ -57,8 +57,8 @@
     <li class="FlexGrid-item">
       <div class="Chart">
         <header class="Titles">
-          <h1 class="Titles-main">Session por móvil</h1>
-          <p class="Titles-sub">Last 30 days</p>
+          <h1 class="Titles-main">Session por Móvil</h1>
+          <p class="Titles-sub">Últimos 30 días</p>
         </header>
         <figure class="Chartjs-figure" id="mobile-chart-container"></figure>
         <ol class="Chartjs-legend" id="mobile-chart-container"></ol>
@@ -71,7 +71,7 @@
       <div class="Chart">
         <header class="Titles">
           <h1 class="Titles-main">Top Landing Pages</h1>
-          <p class="Titles-sub">Last 30 days</p>
+          <p class="Titles-sub">Últimos 30 días</p>
         </header>
         <figure class="Chartjs-figure" id="top-landing-chart-container"></figure>
       </div>
@@ -80,7 +80,7 @@
       <div class="Chart">
         <header class="Titles">
           <h1 class="Titles-main">All Pages (Top Content)</h1>
-          <p class="Titles-sub">Last 30 days</p>
+          <p class="Titles-sub">Últimos 30 días</p>
         </header>
         <figure class="Chartjs-figure" id="all-pages-chart-container"></figure>
       </div>
