Cuadro comparativo Sesiones vs Rebote en vista Ruta de Usuarios.

--- a/templates/embed-api/interactive-charts.html
+++ b/templates/embed-api/interactive-charts.html
@@ -35,7 +35,7 @@
     </li>
     <li class="FlexGrid-item">
       <header class="Titles">
-        <h1 class="Titles-main">Sesiones</h3>
+        <h1 class="Titles-main">Sesiones/Rebote</h3>
         <p class="Titles-sub">Últimos 30 días</p>
       </header>
       <figure class="Chartjs-figure" id="temp-landingpath-chart-container" style="min-height:300px"></figure>
