Adherido usuarios a cudro de TopLandingPages por sessiones en la vista Rutas de Usuarios.

--- a/templates/embed-api/interactive-charts.html
+++ b/templates/embed-api/interactive-charts.html
@@ -41,14 +41,14 @@
       <figure class="Chartjs-figure" id="temp-landingpath-chart-container" style="min-height:300px"></figure>
       <ol class="Chartjs-legend" id="legend-6-container"></ol>
     </li>
-    <li class="FlexGrid-item">
+    <!--li class="FlexGrid-item">
       <header class="Titles">
         <h1 class="Titles-main">Tasa de Rebote</h3>
         <p class="Titles-sub">Últimos 30 días</p>
       </header>
       <figure class="Chartjs-figure" id="bouncerate-chart-container" style="min-height:300px"></figure>
       <ol class="Chartjs-legend" id="legend-6-container"></ol>
-    </li>
+    </li-->
   </ul>
 </div>
 
