Cambiado nombre de funciones de grapfico de mobile por dispositivos.

--- a/templates/embed-api/basic-dashboard.html
+++ b/templates/embed-api/basic-dashboard.html
@@ -57,11 +57,11 @@
     <li class="FlexGrid-item">
       <div class="Chart">
         <header class="Titles">
-          <h1 class="Titles-main">Session por Móvil</h1>
+          <h1 class="Titles-main">Sesiones por Dispositivo</h1>
           <p class="Titles-sub">Últimos 30 días</p>
         </header>
-        <figure class="Chartjs-figure" id="mobile-chart-container"></figure>
-        <ol class="Chartjs-legend" id="mobile-chart-container"></ol>
+        <figure class="Chartjs-figure" id="device-chart-container"></figure>
+        <ol class="Chartjs-legend" id="device-chart-container"></ol>
       </div>
     </li>
   </ul>
