Cambiado de titulo de chart de sesiones por pasi en vista Basica.

--- a/templates/embed-api/basic-dashboard.html
+++ b/templates/embed-api/basic-dashboard.html
@@ -26,10 +26,10 @@
     <li class="FlexGrid-item">
       <div class="Chart">
         <header class="Titles">
-          <h1 class="Titles-main">Sesiones</h1>
+          <h1 class="Titles-main">Sesiones por País</h1>
           <p class="Titles-sub">Últimos 30 días</p>
         </header>
-        <figure class="Chartjs-figure" id="chart-container"></figure>
+        <figure class="Chartjs-figure" id="country-container"></figure>
       </div>
     </li>
     <li class="FlexGrid-item">
