--- a/templates/embed-api/basic-dashboard.html
+++ b/templates/embed-api/basic-dashboard.html
@@ -38,8 +38,7 @@
           <h1 class="Titles-main">Usuarios/Nuevos Usuarios</h1>
           <p class="Titles-sub">Últimos 30 días</p>
         </header>
-        <figure class="Chartjs-figure" id="chart-6-container"></figure>
-        <ol class="Chartjs-legend" id="legend-6-container"></ol>
+        <figure class="Chartjs-figure" id="userNewUser-container" style="Display: inline"></figure>
       </div>
     </li>
   </ul>
