Agregado pagina de inicio a la vista de Rutas de Usuarios.

--- a/templates/embed-api/interactive-charts.html
+++ b/templates/embed-api/interactive-charts.html
@@ -30,8 +30,16 @@
     <li class="FlexGrid-item">
       <header class="Titles">
         <h1 class="Titles-main">Top Landing Page</h3>
+        <p class="Titles-sub">Últimos 30 días</p>
       </header>
       <div id="landingpath-chart-container" style="min-height:300px"></div>
+    </li>
+    <li class="FlexGrid-item">
+      <header class="Titles">
+        <h1 class="Titles-main">Página de Inicio</h3>
+        <p class="Titles-sub">Últimos 30 días</p>
+      </header>
+      <figure class="Chartjs-figure" id="inicialpage-chart-container" style="min-height:300px"></figure>
     </li>
     <li class="FlexGrid-item">
       <header class="Titles">
@@ -41,14 +49,6 @@
       <figure class="Chartjs-figure" id="temp-landingpath-chart-container" style="min-height:300px"></figure>
       <ol class="Chartjs-legend" id="legend-6-container"></ol>
     </li>
-    <!--li class="FlexGrid-item">
-      <header class="Titles">
-        <h1 class="Titles-main">Tasa de Rebote</h3>
-        <p class="Titles-sub">Últimos 30 días</p>
-      </header>
-      <figure class="Chartjs-figure" id="bouncerate-chart-container" style="min-height:300px"></figure>
-      <ol class="Chartjs-legend" id="legend-6-container"></ol>
-    </li-->
   </ul>
 </div>
 
