Cambio de orden en vista Rutas de usuario.

--- a/templates/embed-api/interactive-charts.html
+++ b/templates/embed-api/interactive-charts.html
@@ -34,6 +34,8 @@
       </header>
       <div id="landingpath-chart-container" style="min-height:300px"></div>
     </li>
+  </ul>
+  <ul class="FlexGrid">
     <li class="FlexGrid-item">
       <header class="Titles">
         <h1 class="Titles-main">Página de Inicio</h3>
