--- a/templates/embed-api/interactive-charts.html
+++ b/templates/embed-api/interactive-charts.html
@@ -14,6 +14,9 @@
           <h1 class="Titles-main" id="view-name">Selecciona una Vista</h1>
         </div>
       </li>
+      <li class="FlexGrid-item FlexGrid-item--fixed">
+        <div id="active-users-container"></div>
+      </li>
     </ul>
     <div class="ViewSelector" id="view-selector-container"></div>
   </header>
