--- a/templates/options/demographics.html
+++ b/templates/options/demographics.html
@@ -1,4 +1,4 @@
-{% extends 'embed-api/demo.html' %}
+{% extends 'options/demo.html' %}
 
 {% block content %}
 
@@ -44,6 +44,6 @@
 {% block foot_scripts %}
 {{ super() }}
 <script>
-{% include 'embed-api/code/_demographics.js' %}
+{% include 'options/code/_demographics.js' %}
 </script>
 {% endblock %}
