--- a/templates/options/multiple-views.html
+++ b/templates/options/multiple-views.html
@@ -1,4 +1,4 @@
-{% extends 'embed-api/demo.html' %}
+{% extends 'options/demo.html' %}
 
 {% block content %}
 
@@ -37,6 +37,6 @@
 {% block foot_scripts %}
 {{ super() }}
 <script>
-{% include 'embed-api/code/_multiple-views.js' %}
+{% include 'options/code/_multiple-views.js' %}
 </script>
 {% endblock %}
