--- a/templates/user-auth.html
+++ b/templates/user-auth.html
@@ -16,7 +16,7 @@ setTimeout(function() {
   document.getElementById('header').appendChild(progressBar);
 }, 1000);
 
-{% include 'embed-api/code/_snippet.js' %}
+{% include 'options/code/_snippet.js' %}
 
 gapi.analytics.ready(function() {
 
