--- a/templates/options/custom-components.html
+++ b/templates/options/custom-components.html
@@ -1,4 +1,4 @@
-{% extends 'embed-api/demo.html' %}
+{% extends 'options/demo.html' %}
 
 {% block content %}
 <section>
@@ -35,9 +35,9 @@
 {% endblock %}
 
 {% block foot_scripts %}
-{% include'embed-api/dependencies/_custom-components.html' %}
+{% include'options/dependencies/_custom-components.html' %}
 {{ super() }}
 <script>
-{% include 'embed-api/code/_custom-components.js' %}
+{% include 'options/code/_custom-components.js' %}
 </script>
 {% endblock %}
