--- a/templates/options/third-party-visualizations.html
+++ b/templates/options/third-party-visualizations.html
@@ -1,4 +1,4 @@
-{% extends 'embed-api/demo.html' %}
+{% extends 'options/demo.html' %}
 
 {% block content %}
 
@@ -76,9 +76,9 @@
 {% endblock %}
 
 {% block foot_scripts %}
-{% include 'embed-api/dependencies/_third-party-visualizations.html' %}
+{% include 'options/dependencies/_third-party-visualizations.html' %}
 {{ super() }}
 <script>
-{% include 'embed-api/code/_third-party-visualizations.js' %}
+{% include 'options/code/_third-party-visualizations.js' %}
 </script>
 {% endblock %}
