--- a/templates/options/users-routes.html
+++ b/templates/options/users-routes.html
@@ -1,4 +1,4 @@
-{% extends 'embed-api/demo.html' %}
+{% extends 'options/demo.html' %}
 
 {% block content %}
 
@@ -63,9 +63,9 @@
 {% endblock %}
 
 {% block foot_scripts %}
-{% include 'embed-api/dependencies/_third-party-visualizations.html' %}
+{% include 'options/dependencies/_third-party-visualizations.html' %}
 {{ super() }}
 <script>
-{% include 'embed-api/code/_users-routes.js' %}
+{% include 'options/code/_users-routes.js' %}
 </script>
 {% endblock %}
