--- a/templates/server-auth.html
+++ b/templates/server-auth.html
@@ -7,7 +7,7 @@
 {{ super() }}
 
 <script>
-{% include 'embed-api/code/_snippet.js' %}
+{% include 'options/code/_snippet.js' %}
 
 gapi.analytics.ready(function() {
 
