--- a/templates/options/basic.html
+++ b/templates/options/basic.html
@@ -96,6 +96,6 @@
 {% include 'options/dependencies/_third-party-visualizations.html' %}
 {{ super() }}
 <script>
-{% include 'options/code/_basic-dashboard.js' %}
+{% include 'options/code/_basic.js' %}
 </script>
 {% endblock %}
