Creado gráfico circular de sesiones por dispositvos en vista Datos Demográficos.

--- a/templates/options/demographics.html
+++ b/templates/options/demographics.html
@@ -34,6 +34,14 @@
       <div id="demographics-chart-container" style="min-height:300px"></div>
     </li>
   </ul>
+  <ul class="FlexGrid">
+    <li class="FlexGrid-item">
+      <header class="Titles">
+        <h1 class="Titles-main">Dispositivos</h3>
+      </header>
+      <div id="devices-chart-container" style="min-height:300px"></div>
+    </li>
+  </ul>
 </div>
 
 <section>
