Agregado gráficos PIE de sessiones por dispositivos, genero y edad en vista Datos Demográficos.

--- a/templates/options/demographics.html
+++ b/templates/options/demographics.html
@@ -29,17 +29,29 @@
   <ul class="FlexGrid">
     <li class="FlexGrid-item">
       <header class="Titles">
-        <h1 class="Titles-main">Datos Demográficos</h3>
+        <h1 class="Titles-main">Dispositivos</h3>
       </header>
-      <div id="demographics-chart-container" style="min-height:300px"></div>
+      <div id="devices-chart-container" style="min-height:300px"></div>
+    </li>
+    <li class="FlexGrid-item">
+      <header class="Titles">
+        <h1 class="Titles-main">Género</h3>
+      </header>
+      <div id="gender-chart-container" style="min-height:300px"></div>
+    </li>
+    <li class="FlexGrid-item">
+      <header class="Titles">
+        <h1 class="Titles-main">Edad</h3>
+      </header>
+      <div id="age-chart-container" style="min-height:300px"></div>
     </li>
   </ul>
   <ul class="FlexGrid">
     <li class="FlexGrid-item">
       <header class="Titles">
-        <h1 class="Titles-main">Dispositivos</h3>
+        <h1 class="Titles-main">Datos Demográficos</h3>
       </header>
-      <div id="devices-chart-container" style="min-height:300px"></div>
+      <div id="demographics-chart-container" style="min-height:300px"></div>
     </li>
   </ul>
 </div>
