--- a/templates/options/demographics.html
+++ b/templates/options/demographics.html
@@ -19,7 +19,7 @@
       </li>
     </ul>
     <div class="ViewSelector" id="view-selector-container"></div>
-    <div id="date-range-selector-container"></div>
+    <div id="date-range-selector-container" style="padding-top:20px;"></div>
   </header>
 
   <ul class="FlexGrid">
