Agregado padding-bottom en título de mapa y cambio automático de fecha en título de mapa.

--- a/templates/options/demographics.html
+++ b/templates/options/demographics.html
@@ -25,7 +25,7 @@
   <ul class="FlexGrid">
     <li class="FlexGrid-item">
       <header class="Titles">
-        <h1 class="Titles-main">Usuarios por País (últimos 30 días)</h3>
+        <h1 class="Titles-main"style="padding-bottom:10px;">Usuarios por País: <b id="period2">31 day ago - Yesterday</b></h1>
       </header>
       <div id="main-chart-container" style="min-height:300px"></div>
     </li>
