Agregado padding top a lista de gráficos circulares.

--- a/templates/options/demographics.html
+++ b/templates/options/demographics.html
@@ -30,7 +30,7 @@
       <div id="main-chart-container" style="min-height:300px"></div>
     </li>
   </ul>
-  <ul class="FlexGrid">
+  <ul class="FlexGrid" style="padding-top:30px">
     <li class="FlexGrid-item">
       <header class="Titles">
         <h1 class="Titles-main">Dispositivos</h3>
