Agregado padding bottom a titulo.

--- a/templates/options/demographics.html
+++ b/templates/options/demographics.html
@@ -53,7 +53,7 @@
   <ul class="FlexGrid">
     <li class="FlexGrid-item">
       <header class="Titles">
-        <h1 class="Titles-main">Público Objetivo<b id="country"></b></h1>
+        <h1 class="Titles-main" style="padding-bottom:10px">Público Objetivo<b id="country"></b></h1>
       </header>
       <div id="demographics-chart-container" style="min-height:300px"></div>
     </li>
