Adherido gráfico circular de intereses en mercado.

--- a/templates/options/demographics.html
+++ b/templates/options/demographics.html
@@ -43,11 +43,19 @@
       </header>
       <div id="gender-chart-container" style="min-height:300px"></div>
     </li>
+  </ul>
+  <ul class="FlexGrid" style="padding-top:30px">
     <li class="FlexGrid-item">
       <header class="Titles">
         <h1 class="Titles-main">Edad</h1>
       </header>
       <div id="age-chart-container" style="min-height:300px"></div>
+    </li>
+    <li class="FlexGrid-item">
+      <header class="Titles">
+        <h1 class="Titles-main">Intereses</h1>
+      </header>
+      <div id="interest-chart-container" style="min-height:300px"></div>
     </li>
   </ul>
   <ul class="FlexGrid">
