Quitado display: inline; de css.

--- a/templates/options/demographics.html
+++ b/templates/options/demographics.html
@@ -59,7 +59,7 @@
         <div id="interest-chart-container" style="min-height:300px"></div>
       </li>
     </ul>
-    <ul class="col-md-6 FlexGrid" style="padding-top:30px; display:inline;">
+    <ul class="col-md-6 FlexGrid" style="padding-top:30px;">
       <li class="FlexGrid-item">
         <header class="Titles">
           <h1 class="Titles-main" style="padding-bottom:10px">Público Objetivo<b id="country"></b></h1>
