Cambios en comentarios y títulos.

--- a/templates/options/demographics.html
+++ b/templates/options/demographics.html
@@ -13,7 +13,7 @@
         <div class="Titles">
           <h1 class="Titles-main" id="view-name">Selecciona una Vista</h1>
           <div class="Titles-sub">Periodo de comparación:
-            <b id="period">31 day ago - Yesterday</b>
+            <b id="period">31 days ago - Yesterday</b>
           </div>
         </div>
       </li>
