--- a/templates/options/basic.html
+++ b/templates/options/basic.html
@@ -11,7 +11,9 @@
       <li class="FlexGrid-item">
         <div class="Titles">
           <h1 class="Titles-main" id="view-name">Selecciona una Vista</h1>
-          <div class="Titles-sub">Varias visualizaciones</div>
+          <div class="Titles-sub">Periodo de comparación:
+            <b id="period">31 days ago - Yesterday</b>
+          </div>
         </div>
       </li>
       <li class="FlexGrid-item FlexGrid-item--fixed">
@@ -19,11 +21,12 @@
       </li>
     </ul>
     <div id="view-selector-container"></div>
+    <div id="date-range-selector-container" style="padding-top:20px;"></div>
   </header>
 
 
-  <ul class="FlexGrid FlexGrid--halves">
-    <li class="FlexGrid-item">
+  <ul class="row FlexGrid FlexGrid--halves">
+    <li class="col-md-6 FlexGrid-item">
       <div class="Chart">
         <header class="Titles">
           <h1 class="Titles-main">Sesiones por País</h1>
@@ -38,7 +41,7 @@
           <h1 class="Titles-main">Usuarios/Nuevos Usuarios</h1>
           <p class="Titles-sub">Últimos 30 días</p>
         </header>
-        <figure class="Chartjs-figure" id="userNewUser-container" style="Display: inline"></figure>
+        <figure class="Chartjs-figure" id="userNewUser-container"></figure>
       </div>
     </li>
   </ul>
