Traducción de campos.

--- a/templates/account-explorer/index.html
+++ b/templates/account-explorer/index.html
@@ -3,18 +3,17 @@
 {% block content %}
 
 <section>
-  <h2>Browser</h2>
 </section>
 
 <div class="Box">
   <header class="Box-header">
     <div class="AccountExplorerSearch">
       <h3 class="AccountExplorerSearch-title">
-        Search for your account information&hellip;
+        Busca la información de tu cuenta &hellip;
       </h3>
-      <input class="AccountExplorerSearch-field FormField" id="search-box" placeholder="Start typing to search...">
+      <input class="AccountExplorerSearch-field FormField" id="search-box" placeholder="Escribe algo para buscar ...">
       <h3 class="AccountExplorerSearch-title">
-        &hellip;or browse through all your accounts
+        &hellip; o navega a través de todas tu cuentas
       </h3>
       <div id="view-selector-container"></div>
     </div>
